# C_task1-

./: AddingNumber.c  ArraryEvenseries.c  ArrayAdding.c  ArrayEvenOdd.c  ArrayFahrenheitToCelsius.c  ArrayOddSeries.c  Arraymin.c  CMakeLists.txt  Factorial.c  FahrenheitToCelsius.c  Fibonacci.c  FunctionAdd.c  FunctionEvenSeries.c  FunctionFactorial.c  FunctionFahrenheitToC.c  FunctionFibonacci.c  FunctionOddEven.c  FunctionOddSerise.c  FunctionPrimeNumber.c  Minimum.c  OddEven.c  PrimeNumber.c  Series.c  Series1.c  functionMinimum.c
